squash bug

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ main {
     background-color: red;
 }
 
-.ten {
+.hundred {
     background-color: orange;
 }
 
